--- a/terms.css
+++ b/terms.css
@@ -143,6 +143,13 @@ img {
 .logo {
     display: flex;
     align-items: center;
+    height: 100%;
+}
+
+.logo a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
 
 .content-icon {
@@ -163,6 +170,7 @@ img {
     font-size: 16px;
     font-weight: 500;
     transition: all 0.3s ease;
+    line-height: 1;
     padding: 12px 24px;
     border-radius: 100px;
 }
